[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "claodex"
version = "0.1.0"
description = "Multi-agent tmux router for Claude Code and Codex collaboration"
requires-python = ">=3.12"

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
claodex = "claodex.cli:main"

[tool.setuptools.packages.find]
include = ["claodex*"]

[tool.setuptools.package-data]
"claodex.skill" = ["*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
